<resources>
    <string name="app_name">MyStylishExample</string>
    <string name="action_settings">Settings</string>
    <string name="helloworld">Hello World!</string>
    <string name="warning">Warning</string>
    <string name="learnmore">Learn more</string>
    <string name="textviewexample">TextView Example</string>
    <string name="editextexample">EditText Example</string>
    <string name="checkboxexample">CheckBox Example</string>
    <string name="radiobuttonexample">RadioButton Example</string>
    <string name="textviewexamplebold">TextView Example (Bold)</string>
    <string name="textviewexampleitalic">TextView Example (Italic)</string>
    <string name="plainbuttonsample">Plain Button Sample</string>
    <string name="outlinebuttonsample">Outline Button Sample</string>
    <string name="widgetsample">Widget Sample</string>
    <string name="textinputeditextexample">TextInputEditText Example</string>
    <string name="editextwithstyleexample">EditText(with Style) Example</string>
    <string name="textinputeditexwithstyletexample">TextInputEditText(with Style) Example</string>
    <string name="plainprogressbar">Plain Progress Bar</string>
    <string name="progressbarsample">Progress Bar Sample</string>
    <string name="roundprogressbarwithtext">Round Progress Bar (With Text)</string>
    <string name="roundprogressbar">Round Progress Bar</string>
    <string name="multiprogressbar">Multi Progress Bar</string>
    <string name="multiprogressbarwithcolor">Multi Progress Bar (With Color)</string>
    <string name="multiprogressbarwithcolorandtext"><![CDATA[Multi Progress Bar (With Color & Text)]]></string>
    <string name="reverseplainprogressbar">Reverse Plain Progress Bar</string>
    <string name="reverseroundprogressbar">Reverse Round Progress Bar</string>
    <string name="reverseroundprogressbarwithtext">Reverse Round Progress Bar (With Text)</string>
    <string name="reversemultiprogressbar">Reverse Multi Progress Bar</string>
    <string name="reversemultiprogressbarwithcolor">Reverse Multi Progress Bar (With Color)</string>
    <string name="reversemultiprogressbarwithcolorandtext"><![CDATA[Reverse Multi Progress Bar (With Color & Text)]]></string>
    <string name="widget">Widget</string>
    <string name="plainbutton">Plain Button</string>
    <string name="outlinebutton">Outline Button</string>
    <string name="messagebox">Message Box</string>
    <string name="progressbar">Progress Bar</string>
    <string name="multiprogressbarwithicon">Multi Progress Bar (With Icon)</string>
    <string name="reversemultiprogressbarwithicon">Reverse Multi Progress Bar (With Icon)</string>
    <string name="clickmeforbottomsheetmessageboxsample">Click me for bottom sheet messagebox.</string>
    <string name="bottomsheetmessagebox">Bottom Sheet Message Box</string>


    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="indicatortablayout">Indicator TabLayout</string>
    <string name="meter">Meter</string>
    <string name="textviewexamplebolditalic">TextView Example (Bold Italic)</string>
    <string name="fillbuttonsample">Fill Button Sample</string>
    <string name="fillbuttonsampledisable">Fill Button Sample (Disable)</string>
    <string name="fillbutton">Fill Button</string>
    <string name="plainbuttonsampledisable">Plain Button (Disable)</string>
    <string name="textviewexampleincrement">TextView Example (Increment)</string>
    <string name="textviewexampledecrement">TextView Example (Decrement)</string>

    <string name="editextdateexample">EditText(Date) Example</string>
    <string name="editexttimeexample">EditText(Time) Example</string>
    <string name="editextdatetimeexample">EditText(DateTime) Example</string>
</resources>
